syntax = "proto3";

package project;
import "google/protobuf/timestamp.proto";

option go_package = "./pkg/project";

service ProjectService {
  rpc CreateProject(CreateProjectRequest) returns () {}
  rpc DeleteProject() returns () {}
  rpc UpdateProject() returns () {}
  rpc GetProjectByID() returns () {}
  rpc GetProjects() returns () {}
}

message Images {
  string roadmap_img_url = 1;
  string main_image_url = 2;
}

message Date {
  google.protobuf.Timestamp start_date = 1;
  google.protobuf.Timestamp end_date = 2;
}

message Budget {
  uint64 current = 1;
  uint64 need = 2;
}

message Investor {
  uint64 id = 1;
  uint64 money = 2;
  string full_name = 3;
  uint32 user_id = 4;
  uint32 organization_id = 5;
  uint32 project_id = 6;
}

message RoadMap {
  uint64 id = 1;
  Date dates = 2;
  string name = 3;
  string description = 4;
  string job = 5;
  string target = 6;
  uint64 project_id = 7;
}

message CreateProjectRequest {
    uint64 id = 1;
    Images images = 2;
    Date dates = 3;
    Budget budgets = 4;
    string location = 5;
    string name = 6;
    string description = 7;
    string industry = 8;
    repeated Investor investors = 9;
    repeated RoadMap roadmaps = 10;
    uint32 organization_id = 11;
}